<resources>
    <string name="app_name">LaundryAppCustomer</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">already Registered ?</string>
    <string name="login">Login</string>
    <string name="area_of_service">Area of Servie</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sixkgorderandfold">COST : 199RS</string>
    <string name="eightkgorderandfold">COST : 266RS</string>
    <string name="sixkgorderandiron">COST : 245RS</string>
    <string name="eightkgorderandiron">COST : 325RS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other_details">Other DETAILS</string>
    <string name="hostel">Hostel</string>
    <string name="channel_name">helloo</string>
    <string name="channel_description">helloworld</string>
</resources>
