<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/image_logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/laundry_app_logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image_logo"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:id="@+id/register_username"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <EditText
        android:layout_centerHorizontal="true"
        android:textColorHint="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_below="@+id/register_username"
        android:id="@+id/register_name"
        android:hint="@string/full_name"
        android:textColor="@android:color/black"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/bitd_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="BITS ID"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bitd_id"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="EmailID"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <Spinner
        android:id="@+id/hostel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/emailid"
        android:hint="@string/hostel"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        />

    <EditText
        android:id="@+id/room_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hostel"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:hint="Room No."
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@+id/room_no"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_blue_dark"
        android:layout_height="wrap_content"
        android:id="@+id/register_SIGNUP"
        android:text="@string/sign_up" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_login"
        android:layout_marginTop="10dp"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_SIGNUP"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/already_registered"
        android:textColor="@android:color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_login"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/register_SIGNUP"
        android:layout_toRightOf="@+id/t1"
        android:layout_toEndOf="@+id/t1"
        android:textColor="@android:color/black"
        android:text="@string/login" />

</RelativeLayout>